Add controllers and validation behavior pipeline

--- a/src/StorageService/StorageService.API/appsettings.json
+++ b/src/StorageService/StorageService.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=(localdb)\\MSSQLLocalDB;Database=master;Trusted_Connection=True"
+    "MSSQLConnection": "Server=mssql;Database=StorageServiceDb;User Id=sa;Password=Password123!;TrustServerCertificate=True;"
   }
 }
