Fix pagination and docker compose config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,12 @@ services:
       - sql_data:/var/opt/mssql
     networks:
       - storage-network
+    healthcheck:
+      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -C -U sa -P "Password123!" -Q "SELECT 1" -b -o /dev/null
+      interval: 1s
+      timeout: 45s
+      retries: 30
+      start_period: 3s
 
   storage-service:
     build:
@@ -22,7 +28,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080
     depends_on:
-      - mssql
+      mssql:
+        condition: service_healthy
     ports:
       - "8080:8080"
     networks:
